Wed Dec  3 16:25:55 2008  Akinori MUSHA  <knu@iDaemons.org>

	* pack.c (rb_utf8_to_uv), intern.h: Rename utf8_to_uv to
	  rb_utf8_to_uv and export it.

	* re.c (str_ord): Backport String#ord from 1.9 (sort of);
	  requested by Shinichiro Hamaji in [ruby-dev:37247].

Wed Dec  3 16:17:36 2008  Akinori MUSHA  <knu@iDaemons.org>

	* string.c (rb_str_getbyte, rb_str_setbyte): Add String#getbyte
	  and String#setbyte for the forward compatibility with 1.9, where
	  the behavior of String#[] and String#[]= have changed; based on
	  a patch from Shinichiro Hamaji in [ruby-dev:37247].

Wed Dec  3 09:26:29 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rexml/xpath.rb (REXML::XPath.first): apply documentation
	  patch from Ken Bloom in [ruby-core:20213].

	* lib/rexml/xpath.rb (REXML::XPath.each): ditto.

Tue Dec  2 18:23:33 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* configure.in: detect stdio buffer pointers for uClibc.  a patch
	  from Brian Candler <B.Candler at pobox.com> in [ruby-core:12020].
	  [ruby-core:19713]

Thu Nov 27 11:25:04 2008  Akinori MUSHA  <knu@iDaemons.org>

	* range.c: Add Range#cover? as a new alias to #include? for the
	  forward compatibility with 1.9, in which the behavior of
	  Range#include? has changed.

Wed Nov 26 13:31:07 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/gdbm/gdbm.c: do not set members of RSTRING(str) directly.
	  [ruby-dev:37182]

	* ext/gdbm/gdbm.c (rb_gdbm_nextkey): fix memory leak.

Tue Nov 25 16:09:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_independent): no independent string points null_str.
	  [ruby-core:20082]

Tue Nov 25 03:37:42 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tkextlib/blt/tabset.rb, 
	  ext/tk/lib/tkextlib/blt/tabnotebook.rb: 
	  fix many bugs. Now, those work properly.

Mon Nov 24 23:53:44 2008  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/logger.rb: imported upstream version (logger/1.2.7)