@@ -1,3 +1,7 @@
+Wed Dec  3 16:38:11 2008  Akinori MUSHA  <knu@iDaemons.org>
+
+	* regex.c (re_compile_pattern): Use %ld for pointer differences.
+
 Wed Dec  3 16:25:55 2008  Akinori MUSHA  <knu@iDaemons.org>
 
 	* pack.c (rb_utf8_to_uv), intern.h: Rename utf8_to_uv to
